--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zine-viewer-web-component",
+  "name": "@joelmturner/zine-viewer-web-component",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "main": "dist/web-components.umd.js",
   "module": "dist/web-components.es.js",
@@ -16,5 +16,23 @@
   "devDependencies": {
     "typescript": "~5.7.2",
     "vite": "^6.0.7"
-  }
+  },
+  "description": "A web component for viewing zines or small books.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joelmturner/zine-viewer-web-component.git"
+  },
+  "keywords": [
+    "web",
+    "component",
+    "zine",
+    "html",
+    "css"
+  ],
+  "author": "@joelmturner",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/joelmturner/zine-viewer-web-component/issues"
+  },
+  "homepage": "https://github.com/joelmturner/zine-viewer-web-component#readme"
 }
