makes it public

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joelmturner/zine-viewer-web-component",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "main": "dist/web-components.umd.js",
