--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "declaration": true,
     "declarationMap": true,
     "strict": true,
-    "noEmit": false
+    "noEmit": false,
+    "outDir": "./dist"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
